# property-finder

./: README.md  chainlit.md  pyproject.toml
property_finder/backend/: model.py  tool.py
property_finder/configuration/: prompts.toml  toml_support.py
property_finder/frontend/: main.py
property_finder/langchain_agent/: extract_properties.py  templates.py
